--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="L'agence La Panthère est une agence de Web Design basé sur Lyon qui aide les entreprises à devenir attractives et visibles sur internet.">
+    <meta name="description" content="L'agence La Panthère est une entreprise de Webdesign basé sur Lyon qui aide les entreprises à devenir attractives et visibles sur internet.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -64,9 +64,7 @@
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web paris, création logo paris">
-				<h1 class="text-center hero-bloc-text">
-					Agence La Panthère<br>  webdesign
-				</h1>
+				<h1 class="text-center hero-bloc-text">Agence La Panthère<br>webdesign</h1>
 				<div class="text-center">
 					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
